--- a/Email_Network_Analysis/email-network-analysis.ipynb
+++ b/Email_Network_Analysis/email-network-analysis.ipynb
@@ -119,7 +119,7 @@
     "import numpy as np\n",
     "\n",
     "# Statistical Methods\n",
-    "from scipy.stats import entropy, mannwhitneyu\n",
+    "from scipy.stats import entropy, mannwhitneyu, uniform, randint\n",
     "\n",
     "# Network Analysis\n",
     "import networkx as nx\n",
@@ -133,20 +133,33 @@
     "from datashader.bundling import hammer_bundle\n",
     "%matplotlib inline\n",
     "\n",
-    "# Machine Learning\n",
-    "from sklearn.model_selection import train_test_split, cross_val_score, StratifiedKFold\n",
+    "# Machine Learning: Model Selection and Evaluation\n",
+    "from sklearn.model_selection import (train_test_split, cross_val_score,\n",
+    "                                     cross_validate, RandomizedSearchCV,\n",
+    "                                     StratifiedKFold)\n",
+    "from sklearn.metrics import roc_auc_score, roc_curve, make_scorer\n",
+    "\n",
+    "# Machine Learning: Preprocessing\n",
     "from sklearn.preprocessing import StandardScaler, MinMaxScaler, RobustScaler\n",
+    "\n",
+    "# Machine Learning: Models\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.neural_network import MLPClassifier\n",
-    "from sklearn.metrics import roc_auc_score, roc_curve, make_scorer\n",
-    "from sklearn.pipeline import Pipeline\n",
     "from xgboost import XGBClassifier\n",
     "from lightgbm import LGBMClassifier\n",
-    "from sklearn.feature_selection import RFECV\n",
     "\n",
-    "# Suppress warnings (to keep the notebook clean)\n",
+    "# Machine Learning: Pipeline\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "# Machine Learning: Feature Selection\n",
+    "from sklearn.feature_selection import RFECV, SelectFromModel\n",
+    "\n",
+    "# Machine Learning: Model Interpretation\n",
+    "from sklearn.inspection import permutation_importance, PartialDependenceDisplay\n",
+    "\n",
+    "# Suppress warnings to keep the notebook clean\n",
     "warnings.filterwarnings('ignore')\n"
    ]
   },
@@ -807,8 +820,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy.stats import entropy\n",
-    "\n",
     "# Function to calculate diversity\n",
     "def calculate_diversity(node):\n",
     "    neighbors = list(G.neighbors(node))\n",
@@ -1995,7 +2006,7 @@
        "    <tr>\n",
        "      <th>AuthorityScore</th>\n",
        "      <td>65312.0</td>\n",
-       "      <td>8.548725e-37</td>\n",
+       "      <td>8.548744e-37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CrossDeptConnections</th>\n",
@@ -2025,7 +2036,7 @@
        "PageRank                      63517.0  2.237249e-32\n",
        "ClusteringCoefficient         34850.5  1.865525e-01\n",
        "HubScore                      65312.0  8.548599e-37\n",
-       "AuthorityScore                65312.0  8.548725e-37\n",
+       "AuthorityScore                65312.0  8.548744e-37\n",
        "CrossDeptConnections          63577.5  1.225516e-32\n",
        "AvgNeighborDegree             51450.0  2.891770e-10\n",
        "DegreeCentralityVariance      52659.0  6.717546e-12"
@@ -2137,13 +2148,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logistic Regression: Mean AUC = 0.8392\n",
+      "Logistic Regression: Mean AUC = 0.8397\n",
       "Random Forest: Mean AUC = 0.9202\n",
       "Gradient Boosting: Mean AUC = 0.9375\n",
       "SVM: Mean AUC = 0.8209\n",
       "Neural Network: Mean AUC = 0.8125\n",
       "XGBoost: Mean AUC = 0.9415\n",
-      "LightGBM: Mean AUC = 0.9462\n"
+      "LightGBM: Mean AUC = 0.9445\n"
      ]
     }
    ],
@@ -2215,7 +2226,7 @@
       "SVM: AUC = 0.8968\n",
       "Neural Network: AUC = 0.8881\n",
       "XGBoost: AUC = 0.9449\n",
-      "LightGBM: AUC = 0.9460\n",
+      "LightGBM: AUC = 0.9429\n",
       "\n",
       "\n",
       "Evaluating models with MinMaxScaler\n",
@@ -2225,7 +2236,7 @@
       "SVM: AUC = 0.8610\n",
       "Neural Network: AUC = 0.8232\n",
       "XGBoost: AUC = 0.9415\n",
-      "LightGBM: AUC = 0.9449\n",
+      "LightGBM: AUC = 0.9456\n",
       "\n",
       "\n",
       "Evaluating models with RobustScaler\n",
@@ -2235,7 +2246,7 @@
       "SVM: AUC = 0.8968\n",
       "Neural Network: AUC = 0.9125\n",
       "XGBoost: AUC = 0.9449\n",
-      "LightGBM: AUC = 0.9462\n",
+      "LightGBM: AUC = 0.9453\n",
       "\n",
       "\n"
      ]
@@ -2361,20 +2372,12 @@
       "\n",
       "LightGBM results:\n",
       "  Mean Cross-Validated Score: 0.9425279497764019\n",
-      "  Features Selected Per Fold: [13, 12, 12, 14, 13]\n",
+      "  Features Selected Per Fold: [12, 12, 12, 14, 13]\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.model_selection import cross_validate, StratifiedKFold\n",
-    "from sklearn.feature_selection import RFECV\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import RobustScaler\n",
-    "import numpy as np\n",
-    "from sklearn.inspection import permutation_importance\n",
-    "from sklearn.feature_selection import SelectFromModel\n",
-    "\n",
     "# Dictionary to store results\n",
     "model_results = {}\n",
     "\n",
@@ -2563,13 +2566,13 @@
        "   'model__learning_rate': 0.01,\n",
        "   'model__colsample_bytree': 0.6693877551020408},\n",
        "  'Best Score': 0.9836829836829837},\n",
-       " 'LightGBM': {'Best Parameters': {'model__num_leaves': 120,\n",
-       "   'model__n_estimators': 10,\n",
-       "   'model__min_split_gain': 0.22448979591836732,\n",
-       "   'model__min_child_weight': 3.6741020408163267,\n",
-       "   'model__max_depth': 10,\n",
-       "   'model__learning_rate': 0.4140816326530612},\n",
-       "  'Best Score': 0.9781468531468531}}"
+       " 'LightGBM': {'Best Parameters': {'model__num_leaves': 180,\n",
+       "   'model__n_estimators': 710,\n",
+       "   'model__min_split_gain': 0.16326530612244897,\n",
+       "   'model__min_child_weight': 0.001,\n",
+       "   'model__max_depth': 11,\n",
+       "   'model__learning_rate': 0.05040816326530612},\n",
+       "  'Best Score': 0.9778554778554779}}"
       ]
      },
      "execution_count": 24,
@@ -2578,13 +2581,6 @@
     }
    ],
    "source": [
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
-    "from sklearn.preprocessing import RobustScaler\n",
-    "from sklearn.model_selection import RandomizedSearchCV\n",
-    "from sklearn.metrics import roc_auc_score\n",
-    "from scipy.stats import uniform, randint\n",
-    "\n",
     "# Hyperparameter search spaces\n",
     "rf_params = {\n",
     "    'model__n_estimators': randint(100, 2000),  # Number of trees in the forest.\n",
@@ -2751,7 +2747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "id": "2f7c616b-5f12-4918-a0ba-550260d0536c",
    "metadata": {},
    "outputs": [
@@ -2805,20 +2801,12 @@
        "                                 random_state=42, ...))])}}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.model_selection import RandomizedSearchCV\n",
-    "from sklearn.metrics import roc_auc_score\n",
-    "from xgboost import XGBClassifier\n",
-    "from scipy.stats import randint\n",
-    "import numpy as np\n",
-    "\n",
     "# Focused hyperparameter search spaces\n",
     "rf_focused_params = {\n",
     "    'model__n_estimators': randint(600, 700),  # Focused range around 663\n",
@@ -2947,7 +2935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 26,
    "id": "28a3b5df-5b99-45af-bc78-e6b49199a359",
    "metadata": {},
    "outputs": [
@@ -2963,10 +2951,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import pandas as pd\n",
-    "\n",
     "# Retrieve the best Random Forest model\n",
     "best_rf_model = focused_tuned_results['Random Forest']['Best Model'].named_steps['model']\n",
     "\n",
@@ -3036,7 +3020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 27,
    "id": "05ce761c-552a-42fb-996b-7198f53e9c73",
    "metadata": {},
    "outputs": [
@@ -3052,9 +3036,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.inspection import PartialDependenceDisplay\n",
-    "\n",
     "# Number of top features you want to display in the PDP\n",
     "top_n = 15  # Adjust this to the number of features you wish to display\n",
     "\n",
